ajout colonne lien video: Check twitch pour savoir si c'est un lien permanent